--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="buttons">
                 <a href="#projects" class="btn">View my projects →</a>
-                <a href="JITHENDRA_RESUME.pdf" download class="btn">Resume</a>
+                <a href="Manaswi_Resume.pdf" download class="btn">Resume</a>
                 <a href="https://www.linkedin.com/" target="_blank" class="btn">LinkedIn</a>
                 <a href="https://github.com/" target="_blank" class="btn">GitHub</a>
             </div>
