--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     
     <section id="resume" class="section">
         <h2>Resume</h2>
-        <a href="JITHENDRA_RESUME.pdf" download class="btn">Download Resume</a>
+        <a href="Manaswi_Resume.pdf" download class="btn">Download Resume</a>
     </section>
     
     <section id="contact" class="section">
